merchant participation changes